# deploy

./: .editorconfig  .gitignore  README.md  build.ps1  build.sh  deploy-simple.exe.spec  pyproject.toml
src/deploy_simple/: main.py
