
[project]
name = "deploy_simple"
version = "0.1.0"
description = "Descripción de deploy_simple"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyinstaller>=6.17.0",
]

[project.scripts]
deploy_simple = "deploy_simple.main:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]
